Yet another attempt to fix  spacing issue in Sarari

--- a/src/Components/Pages/Reservation/BookingForm/BookingForm.css
+++ b/src/Components/Pages/Reservation/BookingForm/BookingForm.css
@@ -123,7 +123,7 @@
 
 .drop-down {
   margin: 1rem 0rem; /*top and bottom | left and right*/
-  padding: 0.5rem 1rem 0.5rem 0.5rem; /* top | right | bottom | left */
+  padding: 0.5rem 1rem 0.5rem 0rem; /* top | right | bottom | left */
 
   appearance: none; /*This will remove the standard arrow*/
   background-image: url(../../../../Images/chevron-down-solid-green.svg);
@@ -138,6 +138,7 @@
   color: #495e57;
   font-size: 18px;
   font-weight: bold;
+  text-align-last: center; /*Align text in safari*/
   line-height: 24px;
   border: none;
   border-radius: 20px;
